--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "html-loader": "^4.1.0",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.6.1",
+    "purgecss-webpack-plugin": "^4.1.3",
     "style-loader": "^3.3.1",
     "terser-webpack-plugin": "^5.3.5",
     "webpack": "^5.74.0",
